<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeworkDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/homeworkDetails_edit"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/homeworkDetails_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/string_name" />

        <EditText
            android:id="@+id/homeworkDeatils_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date"
            android:text="Date" />

        <Spinner
            android:id="@+id/homeworkDetails_spinnerSubjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.97"
            android:prompt="@string/string_select_subject"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/homeworkDetails_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/string_details" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Done"
            android:textSize="19sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/homeworkDetails_buttons"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/homeworkDetails_buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.9"
            android:backgroundTint="@color/accent"
            android:text="@string/string_save" />

        <Button
            android:id="@+id/homeworkDetails_buttonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:layout_weight="0.9"
            android:backgroundTint="@color/accent"
            android:text="@string/string_close" />


    </LinearLayout>

</LinearLayout>
